--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const oneBlogPost = await getEntryBySlug('blog', 'post-1');
 					class="highlight">FastAPI</span
 				> and <span class="highlight">ExpressJs</span>.
 			</p>
-			<p class="">Current learning Rust and Typescript.</p>
+			<p class="">Current learning Rust, Systems Design and exploring systems development.</p>
 		</div>
 		<div class="flex flex-col">
 			<div class="flex justify-start items-center gap-2">
