--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const oneBlogPost = await getEntryBySlug('blog', 'post-1');
 		<div class="flex flex-col">
 			<div class="flex justify-start items-center gap-2">
 				Find More About Me <i
-					class="fa-solid fa-arrow-right-long text-2xl"></i>
+					class="fa-solid fa-arrow-down-long text-2xl"></i>
 			</div>
 			<div class="flex justify-start text-black my-10 text-2xl items-center gap-2">
 				<a href="https://github.com/RohanJnr" class="hover:scale-[1.1] duration-200 ease-in">
